# mycmux-team

./: .gitignore  CHANGELOG.md  README.md  build-and-update.ps1  build-full.bat.deprecated  build-full.ps1.deprecated  build-lite.ps1  build-personal.ps1  build.bat.deprecated  deploy-update.ps1  index.html  package-dist-readme.txt  package-dist.ps1  package-lock.json  package-source-claude-md.txt  package-source-install-md.txt  package-source-readme-ja.txt  package-source.ps1  package.json
.github/workflows/: release.yml
docs/: DEPLOY.md  README.md  current-state.md
docs/features/implemented/: keyboard-shortcuts.md  rich-browser.md  search-and-command-palette.md  socket-api-and-automation.md
docs/infrastructure/: code-signing.md  data-flow.md  optimization-history.md
src/: App.tsx  global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: launcher.sh  lib.rs  main.rs  socket.rs  terminal_config.rs
src-tauri/src/buddy/: codex.rs  commands.rs  environment.rs  mod.rs  session_log.rs  signal.rs
src-tauri/src/buddy/sensors/: claude_tail.rs  codex_tail.rs  mod.rs
src-tauri/src/commands/: fs.rs  mod.rs  terminal.rs  window.rs  workspace.rs
src-tauri/src/db/: storage.rs
src-tauri/src/fs/: mod.rs  watcher.rs
src-tauri/src/pty/: manager.rs  mod.rs  monitor.rs  osc7.rs  path_norm.rs  session.rs  windows_console.rs
src-tauri/src/remote/: auth.rs  mod.rs  qr.rs  session.rs  ws_handler.rs
src-tauri/src/remote/client/: app.js  index.html  manifest.json  style.css
src/buddy/: BuddyAvatar.tsx  BuddyWidget.css  BuddyWidget.tsx  SpeechBubble.tsx
src/buddy/agent/: PersonaAgent.ts  config.ts  expression.ts  judgment.ts  keystroke.ts  notification.ts  perception.ts  profile.ts  types.ts  workspace.ts
src/buddy/persona/: system-prompt.md
src/components/browser/: BrowserPane.tsx
src/components/layout/: AppShell.tsx  CommandPalette.tsx  FileExplorerSidebar.tsx  KeybindingsModal.tsx  NotificationPanel.tsx  PathJumper.tsx  SettingsMenu.tsx  SocketListener.tsx  TabBar.tsx  TabItem.tsx  TitleBar.tsx
src/components/setup/: AgentSelector.tsx  AgentSlotList.tsx  GridPicker.tsx  GridPreview.tsx  WorkspaceSetup.tsx
src/components/terminal/: XTermWrapper.tsx
src/components/theme/: ThemeSwitcher.tsx  themeDefinitions.ts
src/components/workspace/: PaneDragOverlay.tsx  PaneStarter.tsx  PaneTabBar.tsx  TerminalGrid.tsx  TerminalPane.tsx  WorkspaceView.tsx
src/hooks/: usePaneDragSource.ts  useWorkspacePersist.ts
src/lib/: agents.ts  constants.ts  gridTemplates.ts  ipc.ts  keybindings.ts  notificationStatus.ts  paths.ts  startupSessionGate.ts  workspaceColors.ts
src/stores/: browserStore.ts  fileExplorerStore.ts  paneDragStore.ts  paneMetadataStoreCompat.ts  settingsStore.ts  themeStore.ts  uiStore.ts  workspaceLayoutStore.ts  workspaceListStore.ts
src/types/: index.ts  theme.ts  workspace.ts
