[package]
name = "ptrterminal"
version = "0.1.0"
description = "AI agent terminal workspace"
authors = ["cai0"]
edition = "2021"

[lib]
name = "ptrterminal_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
dashmap = "6"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.38.4"
dirs = "6.0.0"
