[package]
name = "ptrterminal"
version = "0.1.3"
description = "AI agent terminal workspace"
authors = ["cai0"]
edition = "2021"

[lib]
name = "ptrterminal_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
dashmap = "6"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.38.4"
dirs = "6.0.0"

# Remote terminal (WebSocket server for iPhone access)
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
qrcode = { version = "0.14", default-features = false }
rust-embed = "8"
uuid = { version = "1", features = ["v4"] }
rand = "0.8.5"
hex = "0.4"
futures-util = "0.3"

# Linux-specific dependencies (GTK + WebKitGTK for browser pane)
[target.'cfg(target_os = "linux")'.dependencies]
wry = { version = "0.54", features = [] }
webkit2gtk = { version = "2.0" }
gtk = { version = "0.18" }

# macOS-specific dependencies (WKWebView via wry)
[target.'cfg(target_os = "macos")'.dependencies]
wry = { version = "0.54", features = [] }
cocoa = "0.26"
objc = "0.2"

# Windows-specific dependencies (WebView2 via wry)
[target.'cfg(target_os = "windows")'.dependencies]
wry = { version = "0.54", features = [] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
